# chordulator

./: .buildinfo  LICENSE  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js
_modules/: index.html
_sources/: index.rst.txt
chords/: acapella-cards.csml  aint-no-mountain-high-enough.csml  annie-laurie.csml  bluegrass-songs.csml  convert.sh  drift-away-chords.csml  early-in-the-morning.txt  every-day-i-have-the-blues.txt  flip-flop-and-fly.csml  flip-flop-and-fly.html  for-a-thousand-years.html  for-a-thousand-years.txt  from-this-moment.csml  from-this-moment.html  from-this-moment.txt  i-m-yours.csml  i-want-to-be-like-you.html  i-want-to-be-like-you.txt  in-the-waiting-line.csml  jambalaya.html  jambalaya.txt  jump-jive-and-wail.txt  kansas-city.txt  lazy-river.txt  let-the-good-times-roll.html  let-the-good-times-roll.txt  meet-me-where-they-play-the-blues.html  meet-me-where-they-play-the-blues.txt  midnight-hour.csml  minnie-the-moocher.txt  open.sh  rusty-rovers-playlist.csml  she-caught-the-katy.html  she-caught-the-katy.txt  sloop-john-b.csml  the-boxer-simon-and-garfunkel.csml  the-chain-chords-by-ingrid-michaelson.csml  train-whistle-blues.txt  vincent-don-mclean.csml  when-the-saints-go-marching-in.txt  (+3 more)
csml/: 3-oclock-blue.txt  caldonia.csml  destiny.csml  do-i-ever-cross-your-mind.csml  el-paso.csml  flip-flop-and-fly.csml  good-good-father.csml  keep-breathing.csml  lazy-river.csml  let-the-good-times-roll.csml  list.txt  little-ole-boy.csml  make_playlist.py  midnight-special.txt  open.sh  output.html  overwhelmed.csml  realize.csml  (+7 more)
(+324 files in other folders)
