[project]
name = "harmonic-resonance-chordulator"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
chordulator = "harmonic_resonance.chordulator.app:run"
playlister = "harmonic_resonance.chordulator.playlist_app:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["harmonic_resonance"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "harmonic_resonance.chordulator.__version__"}

[project.urls]
"Website" = "https://harmonic-resonance.github.io/chordulator"
"Repository" = "https://github.com/harmonic-resonance/chordulator"
"Issues" = "https://github.com/harmonic-resonance/chordulator/issues"
